--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -11,19 +11,18 @@
                     <h5 class="your-name">{{this.first_name}} {{this.last_name}}</h5>
                     <div class="row">
                         <div class="col s6">
-                            <p>Pet {{this.birthdate}}</p>
-                            <p>Height: {{this.height}}</p>
-                            <p>Hair: {{this.hair}}</p>
+                            <p>Pet {{this.Pet}}</p>
+                            <p>Breed: {{this.PetBreed}}</p>
+                            <p>Age: {{this.PetAge}}</p>
                         </div>
                         <div class="col s6">
-                            <p>AGE: </p>
-                            <p>Weight: {{this.weight}} lbs</p>
-                            <p>Eye: {{this.eyes}}</p>
+                            <p>Vet: {{this.PetVet}} lbs</p>
+                            <p>Temperament: {{this.PetCare}}</p>
                         </div>
                     </div>
                 </div>
                 <div class="">
-                    <p class="black-text text-darken-4">YOU<a href="profile.html"><i class="material-icons right tooltipped" data-position="top" data-delay="50" data-tooltip="more info">more_horiz</i></a></p>
+                    <p class="black-text text-darken-4">Pet<a href="profile.html"><i class="material-icons right tooltipped" data-position="top" data-delay="50" data-tooltip="more info">more_horiz</i></a></p>
                 </div>
               </div>
             </div>
