--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -63,7 +63,7 @@
 
     <div class="footer-copyright">
         <div class="container grey-text" align="center">
-          © 2018 Copyright Redpoint Media LLC
+          © 2018 Copyright AMP
         <!-- <a class="grey-text right" href="#!">More Links</a> -->
         </div>
     </div>
