--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,9 @@
 
     <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="16x16" href="/images/logos/PetCernMini.png"></link>
+
+    <!-- Your custom styles -->
+    <link rel="stylesheet" href="./css/style.css">
     <!-- End of head script and link tags -->
 
     <style>
@@ -43,7 +46,7 @@
         <nav>
             <div class="nav-wrapper">
                 <div class="container center">
-                    <a href="index.html" class="brand-logo center"><img class="brand-logo" src="/images/logos/petcernlogo.png" width="" height="50px"></a>
+                    <a href="/main" class="brand-logo center"><img class="brand-logo" src="/images/logos/petcernlogo.png" width="" height="50px"></a>
             
             </div>
         </nav>
@@ -71,13 +74,13 @@
     </footer>
 
     <!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 
     <!-- Materialize JS CDN -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
     <!-- Local JS files -->
         <script type="text/javascript" src="/js/index.js"></script>
-        <script type="text/javascript" src="/js/type.js"></s
+        <script type="text/javascript" src="/js/type.js"></script>
 </body>
 </html>
